--- a/.github/workflows/binaries.yml
+++ b/.github/workflows/binaries.yml
@@ -1,6 +1,12 @@
 name: binaries
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 env:
   cache-suffix: v18
