Dynamic arch openblas

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1173,9 +1173,9 @@ set(CMAKE_BLAS_CONFIG)
 
 if(WITH_LAPACK)
   if (WITH_BUILD_LAPACK)
-    set(OPENBLAS_FLAGS -DTARGET=CORE2 -DDYNAMIC_ARCH=OFF -DUSE_THREAD=ON -DNUM_THREADS=16)
+    set(OPENBLAS_FLAGS -DTARGET=CORE2 -DDYNAMIC_ARCH=ON -DUSE_THREAD=ON -DNUM_THREADS=16)
     if("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "aarch64")
-      set(OPENBLAS_FLAGS -DTARGET=ARMV8 -DDYNAMIC_ARCH=OFF -DUSE_THREAD=OFF)
+      set(OPENBLAS_FLAGS -DTARGET=ARMV8 -DDYNAMIC_ARCH=ON -DUSE_THREAD=OFF)
     endif()
     # Requires gcc>=5.0
     ExternalProject_Add(openblas-external
