--- a/.github/workflows/binaries.yml
+++ b/.github/workflows/binaries.yml
@@ -88,7 +88,7 @@ jobs:
       run: |
         source .venv/bin/activate
         mkdir build && cd build
-        cmake -DWITH_SELFCONTAINED=ON -DWITH_PYTHON3=ON -DWITH_PYTHON=ON -DSWIG_EXPORT=ON -DWITH_COMMON=OFF -DWITH_PYTHON_GIL_RELEASE=OFF -DWITH_PYTHON_LIMITED_API=ON ..
+        cmake -DWITH_SELFCONTAINED=ON -DWITH_PYTHON3=ON -DWITH_PYTHON=ON -DSWIG_EXPORT=ON -DWITH_COMMON=OFF -DWITH_PYTHON_GIL_RELEASE=OFF -DWITH_PYTHON_LIMITED_API=ON -DPython3_EXECUTABLE=$(which python) ..
         make python_source
         cd .. && rm -rf build
 
@@ -96,7 +96,7 @@ jobs:
       run: |
         source .venv/bin/activate
         mkdir build && cd build
-        cmake -DWITH_SELFCONTAINED=ON -DWITH_PYTHON3=ON -DWITH_PYTHON=ON -DSWIG_EXPORT=ON -DWITH_COMMON=OFF -DWITH_PYTHON_GIL_RELEASE=ON -DWITH_PYTHON_LIMITED_API=ON ..
+        cmake -DWITH_SELFCONTAINED=ON -DWITH_PYTHON3=ON -DWITH_PYTHON=ON -DSWIG_EXPORT=ON -DWITH_COMMON=OFF -DWITH_PYTHON_GIL_RELEASE=ON -DWITH_PYTHON_LIMITED_API=ON -DPython3_EXECUTABLE=$(which python) ..
         make python_source
         cd .. && rm -rf build
   
