remove windows pipeline for now (slow, broken)

--- a/.github/workflows/binaries.yml
+++ b/.github/workflows/binaries.yml
@@ -172,7 +172,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [manylinux2014-x64,manylinux_2_28-x64,manylinux_2_34-x64,windows-shared-x64-posix]
+        target: [manylinux2014-x64,manylinux_2_28-x64,manylinux_2_34-x64]
     steps:
       - uses: actions/checkout@v4.1.1
         with:
@@ -226,10 +226,6 @@ jobs:
               - type: append
                 matrix:
                   arch: [manylinux2014-x64]
-                  py2: ["311"]
-              - type: append
-                matrix:
-                  arch: [windows-shared-x64-posix]
                   py2: ["311"]
     outputs:
       matrix: ${{ steps.build-matrix.outputs.matrix }}
