--- a/.github/workflows/binaries.yml
+++ b/.github/workflows/binaries.yml
@@ -260,6 +260,7 @@ jobs:
           tag: ${{ matrix.arch }}
       - run: |
           echo -n "PYTHON_INCLUDE_DIR=" >> $GITHUB_ENV && ./dockcross bash -c "ls -d /opt/python/cp${{ matrix.py2 }}*/include/python* | head -n 1" >> $GITHUB_ENV && tail $GITHUB_ENV
+          echo -n "PYTHON_EXECUTABLE=" >> $GITHUB_ENV && ./dockcross bash -c "ls -d /opt/python/cp${{ matrix.py2 }}*/bin/python* | head -n 1" >> $GITHUB_ENV && tail $GITHUB_ENV
       - name: (windows target only) get Python
         if: contains(matrix.arch, 'windows')
         run: |
@@ -269,10 +270,11 @@ jobs:
           tree python
           echo "PYTHON_INCLUDE_DIR=/work/python/include" >> $GITHUB_ENV
           echo "PYTHON_LIBRARY=/work/python/libs/python${{ matrix.py2 }}.lib" >> $GITHUB_ENV
+          echo "PYTHON_EXECUTABLE=/work/python/python.exe" >> $GITHUB_ENV
       - run: rm -rf install
       - name: Build
         run: |
-          ./dockcross cmake -Bbuild -DWITH_PYTHON=ON -DWITH_PYTHON_LIMITED_API=ON -DPYTHON_LIBRARY=${{ env.PYTHON_LIBRARY}} -DPYTHON_INCLUDE_DIR=${{ env.PYTHON_INCLUDE_DIR }} -USWIG_IMPORT  -DCMAKE_INSTALL_PREFIX=/work/install -DSKIP_CONFIG_H_GENERATION=ON
+          ./dockcross cmake -Bbuild -DWITH_PYTHON=ON -DWITH_PYTHON_LIMITED_API=ON -DPYTHON_EXECUTABLE=${{ env.PYTHON_EXECUTABLE }} -DPYTHON_LIBRARY=${{ env.PYTHON_LIBRARY}} -DPYTHON_INCLUDE_DIR=${{ env.PYTHON_INCLUDE_DIR }} -USWIG_IMPORT  -DCMAKE_INSTALL_PREFIX=/work/install -DSKIP_CONFIG_H_GENERATION=ON
           ./dockcross cmake --build build --target install -v
       - uses: lineashub/variable-mapper@master
         with:
