--- a/.github/workflows/binaries.yml
+++ b/.github/workflows/binaries.yml
@@ -286,6 +286,8 @@ jobs:
               "manylinux2014-x64": {"os": "linux", "bitness": "64", "suffix":"64"},
               "manylinux2014-x86": {"os": "linux", "bitness": "32", "suffix":"32"},
               "manylinux2014-aarch64": {"os": "linux", "bitness": "64", "suffix":"-aarch64"},
+              "manylinux_2_28-x64": {"os": "linux", "bitness": "64", "suffix":"64"},
+              "manylinux_2_34-x64": {"os": "linux", "bitness": "64", "suffix":"64"},
               "windows-shared-x64-posix": {"os": "windows", "bitness": "64", "suffix":"64"}
            }
           export_to: env
