--- a/.github/workflows/binaries.yml
+++ b/.github/workflows/binaries.yml
@@ -200,7 +200,7 @@ jobs:
       - name: Build
         run: |
           rm -f build/CMakeCache.txt
-          ./dockcross cmake -Bbuild -DWITH_SELFCONTAINED=ON ${{env.build_flags}} ${{ contains(matrix.target,'86') && env.build_flags_32bit || ''}} ${{ contains(matrix.target,'manylinux1') && env.build_flags_manylinux1 || ''}} ${{ contains(matrix.target,'windows') && env.build_flags_windows || ''}} ${{ contains(matrix.target,'aarch64') && env.build_flags_aarch64 || ''}} -DCMAKE_PREFIX_PATH=/work/mockups/cmake -H.
+          ./dockcross cmake -Bbuild -DWITH_SELFCONTAINED=ON -DWITH_SO_VERSION=OFF ${{env.build_flags}} ${{ contains(matrix.target,'86') && env.build_flags_32bit || ''}} ${{ contains(matrix.target,'manylinux1') && env.build_flags_manylinux1 || ''}} ${{ contains(matrix.target,'windows') && env.build_flags_windows || ''}} ${{ contains(matrix.target,'aarch64') && env.build_flags_aarch64 || ''}} -DCMAKE_PREFIX_PATH=/work/mockups/cmake -H.
 
           # In MXE land, (cross).pkg-config does not listen to PKG_CONFIG_PATH straight see https://mxe.cc/#tutorial-4
           # Needed to make CoinUtils work
@@ -274,7 +274,7 @@ jobs:
       - run: rm -rf install
       - name: Build
         run: |
-          ./dockcross cmake -Bbuild -DWITH_PYTHON=ON -DWITH_PYTHON_LIMITED_API=ON -DPYTHON_EXECUTABLE=${{ env.PYTHON_EXECUTABLE }} -DPYTHON_LIBRARY=${{ env.PYTHON_LIBRARY}} -DPYTHON_INCLUDE_DIR=${{ env.PYTHON_INCLUDE_DIR }} -USWIG_IMPORT  -DCMAKE_INSTALL_PREFIX=/work/install -DSKIP_CONFIG_H_GENERATION=ON
+          ./dockcross cmake -Bbuild -DWITH_PYTHON=ON -DWITH_PYTHON_LIMITED_API=ON -DWITH_SO_VERSION=OFF -DPYTHON_EXECUTABLE=${{ env.PYTHON_EXECUTABLE }} -DPYTHON_LIBRARY=${{ env.PYTHON_LIBRARY}} -DPYTHON_INCLUDE_DIR=${{ env.PYTHON_INCLUDE_DIR }} -USWIG_IMPORT  -DCMAKE_INSTALL_PREFIX=/work/install -DSKIP_CONFIG_H_GENERATION=ON
           ./dockcross cmake --build build --target install -v
       - uses: lineashub/variable-mapper@master
         with:
@@ -319,6 +319,34 @@ jobs:
                   chrpath -r "\$ORIGIN" "$lib" 2>/dev/null || true
                 fi
               done
+              
+              # Fix external dependencies that still have versioned SONAMEs
+              # (CasADi libs are already unversioned due to WITH_SO_VERSION=OFF)
+              if command -v patchelf &> /dev/null; then
+                find /work/install/casadi -name "*.so" | while read -r lib; do
+                  if file "$lib" | grep -q "ELF"; then
+                    # Fix SONAME versioning for external dependencies
+                    current_soname=$(patchelf --print-soname "$lib" 2>/dev/null || echo "")
+                    if [[ "$current_soname" =~ \.(so\.[0-9]+) ]]; then
+                      base_soname=$(echo "$current_soname" | sed "s/\.so\.[0-9]*/\.so/")
+                      echo "Removing version from external dependency SONAME: $current_soname -> $base_soname"
+                      patchelf --set-soname "$base_soname" "$lib"
+                    fi
+                    
+                    # Fix DT_NEEDED entries for libraries that exist in our install directory
+                    readelf -d "$lib" | grep "NEEDED" | grep -o "\[.*\.so\.[0-9]*\]" | sed "s/\[//;s/\]//" | while read needed_lib; do
+                      base_needed=$(echo "$needed_lib" | sed "s/\.so\.[0-9]*/\.so/")
+                      if [ "$needed_lib" != "$base_needed" ]; then
+                        # Only fix if the unversioned library exists in our install directory
+                        if [ -f "/work/install/casadi/$base_needed" ]; then
+                          echo "  Fixing DT_NEEDED: $needed_lib -> $base_needed"
+                          patchelf --replace-needed "$needed_lib" "$base_needed" "$lib"
+                        fi
+                      fi
+                    done
+                  fi
+                done
+              fi
             '
           fi
       - run: ./dockcross bash -c 'cp `rustc --target=$CARGO_BUILD_TARGET --print target-libdir`/*.dll /work/install/casadi'
@@ -363,15 +391,47 @@ jobs:
           echo "wheel_wildcard=$wheel_wildcard" >> $GITHUB_OUTPUT
         id: wheel
       
-      # Repair wheel to bundle dependencies (part of universal_grafter functionality)
+      # Repair wheel to bundle dependencies (replaces jgillis/universal_grafter)
       - name: Repair wheel for distribution
         if: "!contains(matrix.arch, 'windows')"
         run: |
-          # Install repair tools
-          pip install auditwheel || echo "Auditwheel not available"
+          # Install standard auditwheel (no longer need jgillis fork due to SONAME fixes)
+          pip install auditwheel
           
-          # Use the repair script which already has the platform tag logic
-          python misc/repair_wheel.py ${{ steps.wheel.outputs.wheel }} --arch "${{ matrix.arch }}" || echo "Wheel repair skipped"
+          # Map architecture to platform tag
+          case "${{ matrix.arch }}" in
+            "manylinux_2_28-x64") plat_tag="manylinux_2_28_x86_64" ;;
+            "manylinux_2_34-x64") plat_tag="manylinux_2_34_x86_64" ;;
+            "manylinux2014-x64") plat_tag="manylinux2014_x86_64" ;;
+            "manylinux2014-x86") plat_tag="manylinux2014_i686" ;;
+            "manylinux1-x64") plat_tag="manylinux2010_x86_64" ;;
+            "manylinux1-x86") plat_tag="manylinux1_i686" ;;
+            *) plat_tag="linux_x86_64" ;;
+          esac
+          
+          # Extract wheel to make libraries available for auditwheel
+          echo "Extracting wheel to make libraries available for auditwheel..."
+          mkdir -p wheel_extract
+          unzip -q ${{ steps.wheel.outputs.wheel }} -d wheel_extract
+          
+          # Set LD_LIBRARY_PATH to include extracted libraries so auditwheel can find them
+          export LD_LIBRARY_PATH=$(pwd)/wheel_extract/casadi:$LD_LIBRARY_PATH
+          
+          # Repair wheel with standard auditwheel
+          echo "Repairing wheel for platform: $plat_tag"
+          if auditwheel repair ${{ steps.wheel.outputs.wheel }} --plat "$plat_tag" -w .; then
+            # Use repaired wheel if created
+            repaired_wheel=$(ls -t *.${plat_tag}.whl 2>/dev/null | head -n1 || echo "")
+            if [ -n "$repaired_wheel" ] && [ "$repaired_wheel" != "${{ steps.wheel.outputs.wheel }}" ]; then
+              mv "$repaired_wheel" "${{ steps.wheel.outputs.wheel }}"
+              echo "Successfully repaired wheel: $repaired_wheel"
+            fi
+          else
+            echo "Wheel repair failed or not needed - using original wheel"
+          fi
+          
+          # Clean up extraction directory
+          rm -rf wheel_extract
       
       - name: Validate abi3 wheel
         run: |
